src/test/ui/feature-gate-unrestricted-attribute-tokens.stderr
error: expected one of `(`, `)`, `,`, `::`, or `=`, found `b`
  --> $DIR/feature-gate-unrestricted-attribute-tokens.rs:13:13
   |
LL | #[my_attr(a b c d)]
   |             ^ expected one of `(`, `)`, `,`, `::`, or `=` here

error: expected one of `(`, `)`, `,`, `::`, or `=`, found `c`
  --> $DIR/feature-gate-unrestricted-attribute-tokens.rs:13:15
   |
LL | #[my_attr(a b c d)]
   |               ^ expected one of `(`, `)`, `,`, `::`, or `=` here

error: expected one of `(`, `)`, `,`, `::`, or `=`, found `d`
  --> $DIR/feature-gate-unrestricted-attribute-tokens.rs:13:17
   |
LL | #[my_attr(a b c d)]
   |                 ^ expected one of `(`, `)`, `,`, `::`, or `=` here

error: aborting due to 3 previous errors

